# sarc_gazebo_simulation

./: CMakeLists.txt  README.md  javaError.txt  odom.txt  package.xml  terminal.txt
TrajectEmasStd/: OLD-build.gradle  agPrj.mas2j  uav1.asl
TrajectEmasStd/src/agt/: uav1.yaml
TrajectEmasStd/src/java/: RosEnv.java
detectRed/: detect_redPixel_image.cpp
models/MRS_tree_simple/: model.sdf
models/MRS_tree_simples_close/: model.config  model.sdf
models/MRS_tree_simples_fire/: model.config  model.sdf
models/tree_green/: model.config  model.sdf
models/tree_green/scripts/: tree_simple.material
models/tree_red/: model.sdf
models/tree_red/scripts/: tree_simple.material
models/tree_yellow/: model.sdf
models/tree_yellow/scripts/: tree_simple.material
scripts/: delete.py  fire.py  forest.py  forest2.py
tmux/demo/: fire.world  firefight.world  session.yml
tmux/demo/config/: 2world_config.yaml  world_config.yaml
tmux/demo/pos/: pos2.yaml  pos3.yaml  pos4.yaml  pos5.yaml  pos6.yaml
uav_agents/: agPrj.mas2j  build.gradle  outpGradlew.tmp  uav1 (copy).asl  uav1.asl
uav_agents/src/agt/: uav1.asl  uav1.yaml  uav2.yaml  uav3.yaml  uav4.yaml
uav_agents/src/java/: CriticalEmbeddedAgArch.jaBAA  MyRosMaster.java
worlds/: SARC.world  fire.world
